Pre-refactor: consolidate pending changes
Baseline commit before hexagonal architecture refactor.
Includes bitstring status list enhancements, SD-JWT support,
DCQL query model, and various service improvements.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>